ricerca giochi su lettera "S"

--- a/MAME32ui.ini
+++ b/MAME32ui.ini
@@ -2,8 +2,8 @@
 
 ### interface ###
 
-default_game rygar2
-default_folder_id 20
+default_game snowbro3
+default_folder_id 1
 show_image_section 1
 current_tab snapshot
 show_tool_bar 1
@@ -2668,6 +2668,8 @@ nemesis_rom_audit 0
 nemesuk_rom_audit 0
 nemo_rom_audit 0
 nemoj_rom_audit 0
+neobattl_play_count 1
+neobattl_play_time 80
 neobattl_rom_audit 0
 neobombe_rom_audit 0
 neocup98_play_count 1
@@ -3573,6 +3575,8 @@ s1945iii_rom_audit 0
 s1945j_rom_audit 0
 s1945jn_rom_audit 0
 s1945p_rom_audit 0
+sabotenb_play_count 1
+sabotenb_play_time 89
 sabotenb_rom_audit 0
 sadari_rom_audit 0
 safari_rom_audit 0
@@ -3586,17 +3590,19 @@ sailorws_rom_audit 0
 saiyugb1_rom_audit 0
 saiyugb2_rom_audit 0
 saiyugou_rom_audit 4
-salamand_play_count 1
-salamand_play_time 31
+salamand_play_count 2
+salamand_play_time 134
 salamand_rom_audit 0
 salamanj_play_count 1
 salamanj_play_time 103
 salamanj_rom_audit 0
 salmndr2_rom_audit 0
 samesam2_rom_audit 4
+samesame_play_count 1
+samesame_play_time 51
 samesame_rom_audit 4
-samsho_play_count 1
-samsho_play_time 136
+samsho_play_count 2
+samsho_play_time 203
 samsho_rom_audit 0
 samsho2_play_count 1
 samsho2_play_time 490
@@ -3604,6 +3610,8 @@ samsho2_rom_audit 0
 samsho3_rom_audit 0
 samsho4_rom_audit 0
 samurai_rom_audit 0
+samuraia_play_count 1
+samuraia_play_time 92
 samuraia_rom_audit 0
 sandscrp_rom_audit 0
 sarge_rom_audit 0
@@ -3613,6 +3621,8 @@ satansat_rom_audit 0
 satansat_samples_audit 1
 saturn_rom_audit 0
 sauro_rom_audit 0
+savagere_play_count 1
+savagere_play_time 54
 savagere_rom_audit 0
 savgbees_rom_audit 0
 sbagman_rom_audit 0
@@ -3652,19 +3662,27 @@ scontra_rom_audit 0
 scontraj_rom_audit 0
 scorpnmc_rom_audit 0
 scramblb_rom_audit 0
+scramble_play_count 1
+scramble_play_time 131
 scramble_rom_audit 0
 scrambls_rom_audit 0
 scregg_rom_audit 0
 screwloo_rom_audit 0
 scross_rom_audit 0
+sctionza_play_count 1
+sctionza_play_time 79
 sctionza_rom_audit 0
 scudhamm_rom_audit 0
+sdgndmps_play_count 2
+sdgndmps_play_time 145
 sdgndmps_rom_audit 0
 sdi_rom_audit 0
 sdioj_rom_audit 0
 sdodgeb_rom_audit 0
 sdtennis_rom_audit 0
 sdungeon_rom_audit 0
+searchar_play_count 1
+searchar_play_time 70
 searchar_rom_audit 0
 seawolf_rom_audit 0
 seawolf_samples_audit 1
@@ -3681,9 +3699,15 @@ seiham_rom_audit 0
 selfeena_rom_audit 0
 sengekij_rom_audit 0
 sengekis_rom_audit 0
+sengokh_play_count 1
+sengokh_play_time 269
 sengokh_rom_audit 0
 sengoku_rom_audit 0
+sengoku2_play_count 1
+sengoku2_play_time 77
 sengoku2_rom_audit 0
+sengoku3_play_count 1
+sengoku3_play_time 127
 sengoku3_rom_audit 0
 senjyo_rom_audit 0
 senknow_rom_audit 0
@@ -3758,9 +3782,15 @@ sgunner_rom_audit 0
 sgunner2_rom_audit 0
 sgunnr2j_rom_audit 0
 shackled_rom_audit 0
+shadfrce_play_count 1
+shadfrce_play_time 191
 shadfrce_rom_audit 0
+shadowld_play_count 1
+shadowld_play_time 100
 shadowld_rom_audit 0
 shadoww_rom_audit 0
+shadowwa_play_count 1
+shadowwa_play_time 186
 shadowwa_rom_audit 0
 shangha2_rom_audit 0
 shangha3_rom_audit 0
@@ -3772,24 +3802,38 @@ shangon_rom_audit 0
 shangonb_play_count 1
 shangonb_play_time 226
 shangonb_rom_audit 0
+shaolins_play_count 1
+shaolins_play_time 49
 shaolins_rom_audit 0
 sharkatt_rom_audit 0
 sharkatt_samples_audit 1
 sharrier_rom_audit 0
 shdancbl_rom_audit 0
+shdancer_play_count 1
+shdancer_play_time 141
 shdancer_rom_audit 0
 shdancrj_rom_audit 0
 sheriff_rom_audit 4
 shimpacp_rom_audit 0
 shimpact_rom_audit 0
+shinobi_play_count 1
+shinobi_play_time 22
 shinobi_rom_audit 0
 shinobia_rom_audit 0
+shinobib_play_time 1
 shinobib_rom_audit 0
+shinobl_play_count 1
+shinobl_play_time 193
 shinobl_rom_audit 0
 shippumd_rom_audit 0
+shisen_play_count 1
+shisen_play_time 124
 shisen_rom_audit 0
 shocking_rom_audit 0
+shocktr2_play_time 3
 shocktr2_rom_audit 1
+shocktra_play_count 1
+shocktra_play_time 142
 shocktra_rom_audit 0
 shocktro_rom_audit 0
 shollow_rom_audit 0
@@ -3800,8 +3844,12 @@ shootouj_rom_audit 0
 shootout_rom_audit 0
 showdown_rom_audit 0
 shrike_rom_audit 0
+shtrider_play_count 1
+shtrider_play_time 141
 shtrider_rom_audit 0
 shuffle_rom_audit 0
+shufshot_play_count 1
+shufshot_play_time 47
 shufshot_rom_audit 0
 shuuz_rom_audit 0
 shuuz2_rom_audit 0
@@ -3812,16 +3860,22 @@ sicv_rom_audit 0
 sicv_samples_audit 1
 sidearjp_rom_audit 0
 sidearmr_rom_audit 0
+sidearms_play_count 1
+sidearms_play_time 99
 sidearms_rom_audit 0
 sidepckt_rom_audit 0
 sidepctb_rom_audit 0
 sidepctj_rom_audit 0
 sidetrac_rom_audit 0
 sidetrac_samples_audit 1
+silentd_play_count 1
+silentd_play_time 79
 silentd_rom_audit 0
 silentdj_rom_audit 0
 silkroad_rom_audit 0
 silkworm_rom_audit 0
+silkwrm2_play_count 1
+silkwrm2_play_time 65
 silkwrm2_rom_audit 0
 silvland_rom_audit 0
 simps2pj_rom_audit 0
@@ -3848,6 +3902,8 @@ skingame_rom_audit 0
 skullxb2_rom_audit 0
 skullxbo_rom_audit 0
 skyadvnj_rom_audit 0
+skyadvnt_play_count 1
+skyadvnt_play_time 50
 skyadvnt_rom_audit 0
 skyadvnu_rom_audit 0
 skyalert_rom_audit 0
@@ -3859,21 +3915,33 @@ skydiver_rom_audit 0
 skyfox_rom_audit 0
 skykid_rom_audit 0
 skykidd_rom_audit 0
+skykiddo_play_count 1
+skykiddo_play_time 47
 skykiddo_rom_audit 0
 skykiddx_rom_audit 0
 skykido_rom_audit 0
 skylancr_rom_audit 0
 skyraid_rom_audit 0
+skyshark_play_count 1
+skyshark_play_time 35
 skyshark_rom_audit 0
 skyskipr_rom_audit 0
+skysmash_play_count 1
+skysmash_play_time 54
 skysmash_rom_audit 0
 skysoldr_rom_audit 0
 skywolf_rom_audit 0
 skywolf2_rom_audit 0
+slammast_play_count 1
+slammast_play_time 86
 slammast_rom_audit 0
 slammasu_rom_audit 0
 slapbtjp_rom_audit 0
+slapbtuk_play_count 1
+slapbtuk_play_time 142
 slapbtuk_rom_audit 0
+slapfigh_play_count 1
+slapfigh_play_time 12
 slapfigh_rom_audit 4
 slapshot_rom_audit 0
 sliksh17_rom_audit 0
@@ -3881,10 +3949,14 @@ slikshot_rom_audit 0
 slither_rom_audit 0
 slithera_rom_audit 0
 slmdunkj_rom_audit 0
+slyspy_play_count 1
+slyspy_play_time 172
 slyspy_rom_audit 0
 slyspy2_rom_audit 0
 smashtv_rom_audit 0
 smashtv4_rom_audit 0
+smashtv5_play_count 1
+smashtv5_play_time 130
 smashtv5_rom_audit 0
 smashtv6_rom_audit 0
 smbomb_rom_audit 0
@@ -3892,15 +3964,27 @@ smbombr1_rom_audit 0
 smgolf_rom_audit 0
 smgolfj_rom_audit 0
 smooncrs_rom_audit 0
+snakepit_play_count 1
+snakepit_play_time 60
 snakepit_rom_audit 0
+snakjack_play_count 1
+snakjack_play_time 37
 snakjack_rom_audit 0
 snapjack_rom_audit 0
 sngkace_rom_audit 0
+snowbalt_play_count 1
+snowbalt_play_time 32
 snowbalt_rom_audit 0
+snowboar_play_count 1
+snowboar_play_time 97
 snowboar_rom_audit 0
 snowbro2_rom_audit 0
+snowbro3_play_count 1
+snowbro3_play_time 34
 snowbro3_rom_audit 0
 snowbroa_rom_audit 0
+snowbrob_play_count 1
+snowbrob_play_time 88
 snowbrob_rom_audit 0
 snowbroj_rom_audit 0
 snowbros_rom_audit 0
@@ -4033,6 +4117,8 @@ sprint1_rom_audit 0
 sprint2_rom_audit 0
 sprtmtch_rom_audit 0
 sptrekct_rom_audit 0
+spy_play_count 1
+spy_play_time 33
 spy_rom_audit 0
 spyhnt2a_rom_audit 0
 spyhunt_rom_audit 0
@@ -4073,6 +4159,7 @@ ssf2u_rom_audit 0
 ssf2xj_rom_audit 0
 sshangha_rom_audit 0
 sshanghb_rom_audit 0
+sshooter_play_time 2
 sshooter_rom_audit 0
 ssi_rom_audit 0
 ssideki_rom_audit 0
@@ -4080,6 +4167,8 @@ ssideki2_rom_audit 0
 ssideki3_rom_audit 0
 ssideki4_rom_audit 0
 sslam_rom_audit 0
+ssmissin_play_count 1
+ssmissin_play_time 186
 ssmissin_rom_audit 0
 ssozumo_rom_audit 0
 sspacat2_rom_audit 0
@@ -4180,6 +4269,8 @@ strkforc_rom_audit 0
 strkzone_rom_audit 0
 strnskil_rom_audit 0
 stunrnp_rom_audit 0
+stunrun_play_count 1
+stunrun_play_time 65
 stunrun_rom_audit 0
 subroc3d_rom_audit 0
 subroc3d_samples_audit 1
@@ -4480,6 +4571,8 @@ truco_rom_audit 0
 truxton_rom_audit 0
 truxton2_rom_audit 0
 tsamura2_rom_audit 0
+tsamurai_play_count 1
+tsamurai_play_time 108
 tsamurai_rom_audit 0
 tshingen_rom_audit 0
 tshingna_rom_audit 0
@@ -4744,6 +4837,8 @@ wmatch_rom_audit 0
 wndrmomo_rom_audit 0
 wndrplnt_rom_audit 0
 wof_rom_audit 0
+wofa_play_count 1
+wofa_play_time 284
 wofa_rom_audit 0
 wofj_rom_audit 0
 wofu_rom_audit 0
@@ -4766,8 +4861,8 @@ wtennis_rom_audit 0
 wwester1_rom_audit 0
 wwestern_rom_audit 0
 wwfmania_rom_audit 0
-wwfsstar_play_count 1
-wwfsstar_play_time 162
+wwfsstar_play_count 2
+wwfsstar_play_time 399
 wwfsstar_rom_audit 0
 wwfwfest_play_count 1
 wwfwfest_play_time 97
