--- a/folders/Favorites.ini
+++ b/folders/Favorites.ini
@@ -38,8 +38,9 @@ drgpunch
 elevator
 elvact2u
 exctsccr
-f1dream
+f1dreamb
 f1gp2
+flipshot
 frogger
 fshark
 galivan
@@ -139,6 +140,19 @@ rtype2
 rtypeleo
 rtypeu
 rygar2
+samsho
+samuraia
+scramble
+sctionza
+sengoku3
+shadowwa
+shdancer
+shinobl
+shisen
+shocktra
+sidearms
+snowbrob
+ssmissin
 tehkanwc
 trojanr
 turfmast
