configurazione per  3 joypad (presa del joystick tipo "arcade" su porta usb della tastiera)

--- a/MAME32ui.ini
+++ b/MAME32ui.ini
@@ -2,8 +2,8 @@
 
 ### interface ###
 
-default_game snowbro3
-default_folder_id 1
+default_game gauntlet
+default_folder_id 20
 show_image_section 1
 current_tab snapshot
 show_tool_bar 1
@@ -1460,8 +1460,8 @@ gaunt2_rom_audit 0
 gaunt2p_rom_audit 0
 gauntir1_rom_audit 0
 gauntir2_rom_audit 0
-gauntlet_play_count 1
-gauntlet_play_time 806
+gauntlet_play_count 2
+gauntlet_play_time 882
 gauntlet_rom_audit 0
 gberet_play_count 1
 gberet_play_time 46
