correzione tasti start e coin

--- a/MAME32ui.ini
+++ b/MAME32ui.ini
@@ -2,7 +2,7 @@
 
 ### interface ###
 
-default_game gauntlet
+default_game dino
 default_folder_id 20
 show_image_section 1
 current_tab snapshot
@@ -1018,8 +1018,8 @@ digdugb_rom_audit 0
 digger_rom_audit 0
 dimahoo_rom_audit 0
 dingo_rom_audit 0
-dino_play_count 1
-dino_play_time 391
+dino_play_count 8
+dino_play_time 1108
 dino_rom_audit 0
 dinoj_rom_audit 0
 dinorex_rom_audit 0
@@ -1460,8 +1460,8 @@ gaunt2_rom_audit 0
 gaunt2p_rom_audit 0
 gauntir1_rom_audit 0
 gauntir2_rom_audit 0
-gauntlet_play_count 2
-gauntlet_play_time 882
+gauntlet_play_count 3
+gauntlet_play_time 902
 gauntlet_rom_audit 0
 gberet_play_count 1
 gberet_play_time 46
