aggiunti altri games ai favoriti (lettera "S")

--- a/MAME32ui.ini
+++ b/MAME32ui.ini
@@ -2,8 +2,8 @@
 
 ### interface ###
 
-default_game dino
-default_folder_id 20
+default_game sbomberb
+default_folder_id 1
 show_image_section 1
 current_tab snapshot
 show_tool_bar 1
@@ -3634,8 +3634,12 @@ sbasketb_rom_audit 0
 sbasketo_rom_audit 0
 sbasketu_rom_audit 0
 sbbros_rom_audit 0
+sbm_play_count 1
+sbm_play_time 127
 sbm_rom_audit 0
 sboblbob_rom_audit 0
+sbomberb_play_count 1
+sbomberb_play_time 133
 sbomberb_rom_audit 0
 sbrkout_play_count 1
 sbrkout_play_time 50
@@ -3822,8 +3826,8 @@ shinobi_rom_audit 0
 shinobia_rom_audit 0
 shinobib_play_time 1
 shinobib_rom_audit 0
-shinobl_play_count 1
-shinobl_play_time 193
+shinobl_play_count 2
+shinobl_play_time 1486
 shinobl_rom_audit 0
 shippumd_rom_audit 0
 shisen_play_count 1
@@ -3994,19 +3998,35 @@ sokonuke_rom_audit 0
 solarfox_rom_audit 0
 solarq_rom_audit 0
 solarq_samples_audit 1
+solarwar_play_count 1
+solarwar_play_time 63
 solarwar_rom_audit 0
 soldamj_rom_audit 0
+soldivid_play_count 1
+soldivid_play_time 103
 soldivid_rom_audit 0
 solfight_rom_audit 0
 solfight_samples_audit 1
+solfigtr_play_count 1
+solfigtr_play_time 29
 solfigtr_rom_audit 0
+solomon_play_count 1
+solomon_play_time 211
 solomon_rom_audit 0
 solvalou_rom_audit 0
+sonic_play_count 1
+sonic_play_time 46
 sonic_rom_audit 0
+sonicp_play_count 1
+sonicp_play_time 39
 sonicp_rom_audit 0
+sonicwi_play_count 1
+sonicwi_play_time 86
 sonicwi_rom_audit 0
 sonicwi2_rom_audit 0
 sonicwi3_rom_audit 0
+sonofphx_play_count 1
+sonofphx_play_time 458
 sonofphx_rom_audit 0
 sonson_rom_audit 0
 sonsonj_rom_audit 0
