--- a/folders/Favorites.ini
+++ b/folders/Favorites.ini
@@ -142,6 +142,7 @@ rtypeu
 rygar2
 samsho
 samuraia
+sbomberb
 scramble
 sctionza
 sengoku3
@@ -152,6 +153,9 @@ shisen
 shocktra
 sidearms
 snowbrob
+solomon
+sonicwi
+sonofphx
 ssmissin
 tehkanwc
 trojanr
