configurati joypad per Ikari Warriors

--- a/MAME32ui.ini
+++ b/MAME32ui.ini
@@ -2,7 +2,7 @@
 
 ### interface ###
 
-default_game sbomberb
+default_game ikari
 default_folder_id 1
 show_image_section 1
 current_tab snapshot
@@ -1834,8 +1834,8 @@ idsoccer_rom_audit 0
 iemoto_rom_audit 0
 iganinju_rom_audit 4
 igmo_rom_audit 4
-ikari_play_count 3
-ikari_play_time 826
+ikari_play_count 6
+ikari_play_time 1197
 ikari_rom_audit 0
 ikari3_rom_audit 0
 ikarijp_rom_audit 0
