--- a/MAME32ui.ini
+++ b/MAME32ui.ini
@@ -2,7 +2,7 @@
 
 ### interface ###
 
-default_game yiear2
+default_game atetrisa
 default_folder_id 20
 show_image_section 1
 current_tab snapshot
@@ -291,11 +291,11 @@ ataxxj_rom_audit 0
 atehate_rom_audit 0
 atetckt2_rom_audit 0
 atetcktl_rom_audit 0
-atetris_play_count 2
-atetris_play_time 13007
+atetris_play_count 3
+atetris_play_time 14248
 atetris_rom_audit 0
-atetrisa_play_count 1
-atetrisa_play_time 18
+atetrisa_play_count 2
+atetrisa_play_time 671
 atetrisa_rom_audit 0
 atetrisb_rom_audit 0
 athena_rom_audit 0
@@ -471,6 +471,8 @@ blocken_rom_audit 0
 blockgal_rom_audit 0
 blockhl_rom_audit 0
 blockj_rom_audit 0
+blockout_play_count 2
+blockout_play_time 1603
 blockout_rom_audit 0
 bloodbro_rom_audit 0
 bloods11_rom_audit 0
